--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,7 @@ steps:
           raise SystemExit('Could not find a Django project')
       project_location = path.dirname(path.abspath(manage_py))
       print('Found Django project in', project_location)
+      print('Dhirendra Singh')
       print('##vso[task.setvariable variable=projectRoot]{}'.format(project_location))
 
 - script: |
